[tool.poetry]
name = "yen-parser"
version = "0.1.0"
description = "Yen currency string parser."
authors = ["kenjimaru <kendimaru2@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.6"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
